src/template.yml
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31
Description: Felles brevgenerator

Parameters:
  BrevmalBucket:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /buckets/brevmaler/name

  env:
    Type: String
    Description: Environment for the deploy

# Sjekker om environment er en av "sandbox", "dev", "test" eller "prod"
Conditions:
  IsTrueEnvironment:
    !Or [
      !Equals [!Ref env, "sandbox"],
      !Equals [!Ref env, "dev"],
      !Equals [!Ref env, "test"],
      !Equals [!Ref env, "prod"],
    ]

Resources:
  ###################
  ## Security Groups
  ###################
  SGTilgangTilVPCEndpoints:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for tilgang til VPC Endpoints
      GroupName: !Sub ${env}-felles-brevgenerator-tilgang-vpc-endpoints-sg
      VpcId: "{{resolve:ssm:/vpc/shared-vpc/id}}"
      Tags:
        - Key: Name
          Value: !Sub ${env}-felles-brevgenerator-tilgang-vpc-endpoints-sg

  SGTilgangTilVPCEndpointsEgress01:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SGTilgangTilVPCEndpoints
      CidrIp: 10.18.200.0/23
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443

  SGTilgangTilVPCEndpointsEgress02:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SGTilgangTilVPCEndpoints
      DestinationPrefixListId: pl-6da54004
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443

  SGTilgangTilVPCEndpointsEgress03:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SGTilgangTilVPCEndpoints
      DestinationPrefixListId: pl-6fa54006
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443

  SGTilgangTilHTTPS:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for tilgang til HTTPS, port 443 og DNS, port 53.
      GroupName: !Sub ${env}-felles-brevgenerator-https-tilgang-sg
      VpcId: "{{resolve:ssm:/vpc/shared-vpc/id}}"
      Tags:
        - Key: Name
          Value: !Sub ${env}-felles-brevgenerator-https-tilgang-sg

  SGTilgangTilHTTPSEgress01:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SGTilgangTilHTTPS
      CidrIp: 0.0.0.0/0
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443

  SGTilgangTilHTTPSEgress02:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SGTilgangTilHTTPS
      CidrIp: 0.0.0.0/0
      IpProtocol: tcp
      FromPort: 53
      ToPort: 53

  SGTilgangTilHTTPSEgress03:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SGTilgangTilHTTPS
      CidrIp: 0.0.0.0/0
      IpProtocol: udp
      FromPort: 53
      ToPort: 53

  ###################
  ## API
  ###################
  BrevgeneratorApi:
    Type: AWS::Serverless::Api
    Properties:
      Name: !Sub ${env}-brevgenerator-api-gateway
      Description: Internt API for å lage brev
      StageName: !Ref env
      OpenApiVersion: 3.0.1
      AccessLogSetting:
        DestinationArn: !GetAtt ApiAccessLog.Arn
        Format: $context.identity.sourceIp $context.identity.caller $context.identity.user [$context.requestTime] "$context.httpMethod $context.resourcePath $context.protocol" $context.status $context.responseLength $context.requestId $context.extendedRequestId
      TracingEnabled: true
      MethodSettings:
        - ResourcePath: "/*"
          HttpMethod: "*"
          LoggingLevel: INFO
          MetricsEnabled: true
      Cors:
        AllowOrigin: "'*'"
        AllowMethods: "'POST'"
        AllowHeaders: "'Content-type,Accept'"
        MaxAge: 600
      EndpointConfiguration:
        Type: PRIVATE
        VpcEndpointIds:
          - "{{resolve:ssm:/vpc/shared-vpc/endpoint/execute-api/endpoint-id}}"
      Auth:
        InvokeRole: NONE
        ResourcePolicy:
          CustomStatements:
            [
              {
                "Effect": "Deny",
                "Principal": "*",
                "Action": "*",
                "Resource": "*",
                "Condition":
                  {
                    "StringNotEquals":
                      {
                        "aws:sourceVpce": "{{resolve:ssm:/vpc/shared-vpc/endpoint/execute-api/endpoint-id}}",
                      },
                  },
              },
              {
                "Principal": "*",
                "Action": ["execute-api:Invoke"],
                "Effect": "Allow",
                "Resource": "*",
              },
            ]

  ApiAccessLog:
    Type: AWS::Logs::LogGroup
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      RetentionInDays: 90
      LogGroupName: !Sub ${env}-brevgenerator-api-access-logs

  BrevgeneratorApiIdParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name:
        !If [
          IsTrueEnvironment,
          /felles/brevgenerator/api/id,
          !Sub "/felles/${env}/brevgenerator/api/id",
        ]
      Type: String
      Description: Api-id til internt privat brevgenerator-api
      Value: !Ref BrevgeneratorApi

  ###################
  # Endepunkter
  ###################
  BrevgeneratorFunctionLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/lambda/${BrevgeneratorFunction}
      RetentionInDays: 60

  BrevgeneratorFunction:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${env}-felles-brevgenerator-lambda
      Handler: Brevgenerator::Brevgenerator.Brevgenerator::FunctionHandler
      Runtime: dotnet6
      CodeUri: ./Brevgenerator
      Timeout: 120
      MemorySize: 1024
      Policies:
        - S3ReadPolicy:
            BucketName: !Ref BrevmalBucket
        - AWSLambdaBasicExecutionRole
      Environment:
        Variables:
          Brevmalbucket: !Ref BrevmalBucket
      VpcConfig:
        SecurityGroupIds:
          - !Ref SGTilgangTilVPCEndpoints
          - !Ref SGTilgangTilHTTPS
        SubnetIds:
          - "{{resolve:ssm:/vpc/shared-vpc/subnet/a/subnet-id}}"
          - "{{resolve:ssm:/vpc/shared-vpc/subnet/b/subnet-id}}"
      ProvisionedConcurrencyConfig:
        ProvisionedConcurrentExecutions: 1
      AutoPublishAlias: BrevgeneratorVersion
      Events:
        GenererBrev:
          Type: Api
          Properties:
            Path: /genererbrev
            Method: POST
            RestApiId: !Ref BrevgeneratorApi
        VarmOpp:
          Type: Api
          Properties:
            Path: /varmopp
            Method: POST
            RestApiId: !Ref BrevgeneratorApi
